--- a/index.html
+++ b/index.html
@@ -606,11 +606,10 @@
           d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.5-1.632z"/>
       </svg>
     </div>
-    <p class="hero-greeting fade-in">Hi, I'm Hashim</p>
+    <p class="hero-greeting fade-in">Hi, I'm Hashim.</p>
     <h1 class="hero-headline fade-in">
-      Building <span class="gradient-text">digital</span> products,
-      <span class="gradient-text">brands</span>, and
-      <span class="gradient-text">experience.</span>
+      Building digital <span class="gradient-text">products,</span>
+      brands, and <span class="gradient-text">experience.</span>
     </h1>
     <a href="#work" class="hero-cta fade-in">
       Latest Work
